--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_GRAPHCMS_ENDPOINT=https://api-ap-south-1.graphcms.com/v2/ckzfr64s90s4i01xsaq6qhesp/master
+NEXT_PUBLIC_GRAPHCMS_ENDPOINT='https://api-ap-south-1.graphcms.com/v2/ckzfr64s90s4i01xsaq6qhesp/master'
