--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "html-react-parser": "^1.4.8",
+    "jalali-moment": "^3.3.11",
     "moment": "^2.29.1",
     "next": "12.0.10",
     "react": "17.0.2",
